# CrowdFlow

./: LICENSE  README.md  file_parser.py  opticalflow_estimate.py  opticalflow_evaluate.py  trajectory_evaluate.py  util.py
Trajectory/: CMakeLists.txt  python_module.cpp  trajectory_module.cpp  trajectory_module.h
